# cottages

./: .dockerignore  .gitignore  Dockerfile  prod.env  pyproject.toml
Cottages/: settings.py  urls.py
app/: example.env  manage.py
app/Cottages/: asgi.py  settings.py  urls.py  wsgi.py
app/homes/: admin.py  apps.py  forms.py  model_fields.py  models.py  parsers.py  service.py  urls.py  utils.py  views.py
app/templates/: base.html  contacts.html  footer.html  header.html
deploy/: README.md  docker-compose.yaml  example.env
deploy/app/: example.env
deploy/nginx/: nginx.conf.template
homes/: admin.py  forms.py  models.py  parsers.py  urls.py  validators.py  views.py
homes/migrations/: 0001_initial.py  0002_alter_homecarouselimage_unique_together_and_more.py  0002_home_show_on_site_alter_home_id_and_more.py  0002_ticket.py  0003_rename_has_fan_home_has_hairdryer.py  0003_ticket_created_at.py  0004_alter_home_long_description.py  0004_ticket_processed_alter_ticket_created_at_and_more.py  0005_remove_ticket_processed_ticket_comment_and_more.py  0006_alter_ticket_comment_alter_ticket_name.py
homes/templatetags/: components.py  homes_extras.py
static/css/: all_homes.css  home_details.css  reset.css  style.css  typography.css
static/js/: all_homes.js  carousel.js  details.js  form.js  home_details.js  home_details_flipper.js  main.js  tabs.js
templates/: base.html  contacts.html
templates/common/: base.html  chevron.html  conveniences.html  layout.html  nav.html
templates/components/: button.html  card.html  carousel.html
templates/homes/: index.html  (+12 more)
(+55 files in other folders)
